package patterns.command.lunchroom;

/**
 * command interface
 */
public interface Order {
	public void execute();
}
