@startuml

title __LUNCHROOM's Class Diagram__\n

  namespace patterns.command.lunchroom {
    class patterns.command.lunchroom.BurgerAndFriesOrder {
        + BurgerAndFriesOrder()
        + execute()
    }
  }
  

  namespace patterns.command.lunchroom {
    class patterns.command.lunchroom.Klant {
        + Klant()
        + createOrder()
        + giveOrderToServeerster()
    }
  }
  

  namespace patterns.command.lunchroom {
    class patterns.command.lunchroom.Kok {
        + Kok()
        + makeBurger()
        + makeFries()
    }
  }
  

  namespace patterns.command.lunchroom {
    class patterns.command.lunchroom.LunchRoom {
        {static} + main()
    }
  }
  

  namespace patterns.command.lunchroom {
    interface patterns.command.lunchroom.Order {
        {abstract} + execute()
    }
  }
  

  namespace patterns.command.lunchroom {
    class patterns.command.lunchroom.Serveerster {
        + Serveerster()
        + takeOrder()
    }
  }
  

  patterns.command.lunchroom.BurgerAndFriesOrder .up.|> patterns.command.lunchroom.Order
  patterns.command.lunchroom.BurgerAndFriesOrder o-- patterns.command.lunchroom.Kok : kok
  patterns.command.lunchroom.Klant o-- patterns.command.lunchroom.Order : order
  patterns.command.lunchroom.Klant o-- patterns.command.lunchroom.Serveerster : serveerster
  patterns.command.lunchroom.Serveerster o-- patterns.command.lunchroom.Order : order


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
